src/objects/echosign_dev1__Library_Template__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipName>Library_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <label>Document Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Last_Modified__c</fullName>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Reference_Type__c</fullName>
        <label>Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Form Field Layer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Form Field Layer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Library Template</label>
    <nameField>
        <label>Library Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>